--- a/404.html
+++ b/404.html
@@ -1,18 +1,16 @@
 <HTML>
 	<link rel="stylesheet" href="css.css"/>
-	<title> Welcome!!! </title>
+	<title> 404 | Not Found </title>
 	<div class="text">
 	<h1>
 		<center>
-			Welcome!!!
+			404 Page Not Found
 		</center>
 	</h1>
 	<body bgcolor="black">
 		<p>
-			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
-			This website is my first major project, It's not finished yet and I'm still working on it. <br> <br>
-			I am interested in video games and pretty much anything to do with computers. <br> <br>
-			I mostly play csgo, fortnite, minecraft and elite dangerous. <br>
+			Hmm... It seams this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
+			Click <a href="index.html">here</a> to go to the home page. <br>
 		</p>
 	</body>
 	<hr class="footerline">
