--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<body bgcolor="black">
 		<p>
 			Hmm... It seams this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
-			Click <a href="index.html">here</a> to go to the home page. <br>
+			Click <a href="index.html" style=color:#0066cc>here</a> to return to the home page. <br>
 		</p>
 	</body>
 	<hr class="footerline">
