--- a/404.html
+++ b/404.html
@@ -1,16 +1,19 @@
 <HTML>
-	<link rel="stylesheet" href="css.css"/>
-	<title> 404 | Not Found </title>
+	<head>
+		<link rel="stylesheet" href="main.css"/>
+		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<title> 404 | Not Found </title>
+	</head>
 	<div class="text">
 	<h1>
 		<center>
 			404 Page Not Found
 		</center>
 	</h1>
-	<body bgcolor="black">
+	<body>
 		<p>
-			Hmm... It seams this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
-			Click <a href="index.html">here</a> to return to the home page. <br>
+			Hmm... It seems this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
+			Click <a href="index.html" style=color:red>here</a> to return to the home page. <br>
 		</p>
 	</body>
 	<hr class="footerline">
