--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <HTML>
-	<link rel="stylesheet" href="css.css"/>
-	<title> Welcome!!! </title>
+	<head>
+		<link rel="stylesheet" href="main.css"/>
+		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<title> Welcome!!! </title>
+	</head>
 	<div class="text">
 	<h1>
 		<center>
