--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			Welcome!!!
 		</center>
 	</h1>
-	<body bgcolor="black">
+	<body>
 		<p>
 			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
 			This website is my first major project, It's not finished yet and I'm still working on it. <br> <br>
