--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="main.css"/>
-		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<link rel="icon" href="assets/images/cat0.jpg">
 		<title> 404 | Not Found </title>
 	</head>
 	<div class="text">
