--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="main.css"/>
-		<link rel="icon" href="assets/images/cat0.jpg">
+		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
 		<title> 404 | Not Found </title>
 	</head>
 	<div class="text">
@@ -22,6 +22,9 @@
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> <a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
+		<center>
+			©Nico 2022
+		</center>
 	</footer>
 	</div>
 </HTML>
