--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> <a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
+		<center>
+			©Nico 2022
+		</center>
 	</footer>
 	</div>
 </HTML>
