--- a/404.html
+++ b/404.html
@@ -22,6 +22,7 @@
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> <a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/images/twitch.png" class="img"> </a>
 		<center>
 			©Nico 2022
 		</center>
