--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <HTML>
 	<head>
-		<link rel="stylesheet" href="main.css"/>
+		<link rel="stylesheet" href="https://nico.is-a.dev/main.css"/>
 		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
 		<title> 404 | Not Found </title>
 	</head>
@@ -23,6 +23,7 @@
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
 		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/images/twitch.png" class="img"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/images/twitter.png" class="img"> <a>
 		<center>
 			©Nico 2022
 		</center>
