--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="https://nico.is-a.dev/main.css"/>
-		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<link rel="icon" type="image/x-icon" href="https://nico.is-a.dev/assets/images/cat0.jpg">
 		<title> 404 | Not Found </title>
 	</head>
 	<div class="text">
@@ -19,11 +19,11 @@
 	<hr class="footerline">
 	<footer>
 		<img src="assets/images/discord.png" class="img">
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> <a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/images/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/images/twitter.png" class="img"> <a>
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/images/guilded.png" class="img"> <a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/github.png" class="img"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/images/youtube.png" class="img"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitch.png" class="img"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitter.png" class="img"> <a>
 		<center>
 			©Nico 2022
 		</center>
