--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 	<body>
 		<p>
 			Hmm... It seems this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
-			Click <a href="https://nicogaming77.github.io" style=color:red>here</a> to return to the home page. <br>
+			Click <a href="https://nico.is-a.dev" style=color:red>here</a> to return to the home page. <br>
 		</p>
 	</body>
 	<hr class="footerline">
