--- a/404.html
+++ b/404.html
@@ -19,11 +19,11 @@
 	<hr class="footerline">
 	<footer>
 		<img src="https://nico.is-a.dev/assets/images/discord.png" class="img">
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/images/guilded.png" class="img"> <a>
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/images/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/images/youtube.png" class="img"> </a>
 		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitter.png" class="img"> <a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitter.png" class="img"> </a>
 		<center>
 			©Nico 2022
 		</center>
