--- a/projects.html
+++ b/projects.html
@@ -2,21 +2,29 @@
 	<head>
 		<link rel="stylesheet" href="main.css"/>
 		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
-		<title> Welcome!!! </title>
+		<title> Projects </title>
 	</head>
 	<div class="text">
 	<h1>
 		<center>
-			Welcome!!!
+			Projects
 		</center>
 	</h1>
 	<body>
 		<p>
-			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
-			This website is one of my first major projects, It's not finished yet and I'm still working on it. <br> <br>
-			I am interested in video games and pretty much anything to do with computers. <br> <br>
-			I mostly play csgo, fortnite, minecraft and elite dangerous. <br>
+			This is one of my ongoing projects. <br>
 		</p>
+		<div class="box"> 
+			<h2 style="text-align: center"> 
+					512x Minecraft Texture Pack 
+			</h2>
+			<p> 
+				This is a custom high resolution minecraft texture pack that I am working on.
+			</p>
+		</div>
+		<div class="box">
+			
+		</div>
 	</body>
 	<hr class="footerline">
 	<footer>
