--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="https://nico.is-a.dev/main.css"/>
-		<link rel="icon" type="image/x-icon" href="https://nico.is-a.dev/assets/images/cat0.jpg">
+		<link rel="icon" type="image/x-icon" href="https://nico.is-a.dev/assets/images/Cat0.jpg">
 		<title> 404 | Not Found </title>
 	</head>
 	<div class="text">
@@ -11,13 +11,15 @@
 		</center>
 	</h1>
 	<body>
-		<p>
+		<p class="p-align">
 			Hmm... It seems this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
-			Click <a href="https://nico.is-a.dev" style=color:red>here</a> to return to the home page. <br>
 		</p>
+		<div>
+			<a href="https://nico.is-a.dev" class="button"> Return home </a> <br> <br>
+		</div>
 	</body>
 	<hr class="footerline">
-	<footer>
+	<footer class="p-align">
 		<img src="https://nico.is-a.dev/assets/images/discord.png" class="img">
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/images/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/github.png" class="img"> </a>
