--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="main.css"/>
-		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<link rel="icon" type="image/x-icon" href="assets/images/Cat0.jpg">
 		<title> Welcome!!! </title>
 	</head>
 	<div class="text">
@@ -11,15 +11,18 @@
 		</center>
 	</h1>
 	<body>
-		<p>
+		<p class="p-align">
 			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
 			This website is one of my first major projects, It's not finished yet and I'm still working on it. <br> <br>
 			I am interested in video games and pretty much anything to do with computers. <br> <br>
-			I mostly play csgo, fortnite, minecraft and elite dangerous. <br>
+			I mostly play csgo, fortnite, minecraft and elite dangerous. <br> <br>
 		</p>
+		<div>
+			<a href="projects.html" class="button"> Projects </a> <br> <br>
+		</div>
 	</body>
 	<hr class="footerline">
-	<footer>
+	<footer class="p-align">
 		<img src="assets/images/discord.png" class="img">
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
