--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" href="main.css"/>
-		<link rel="icon" type="image/x-icon" href="assets/images/cat0.jpg">
+		<link rel="icon" type="image/x-icon" href="assets/images/Cat0.jpg">
 		<title> Projects </title>
 	</head>
 	<div class="text">
@@ -11,23 +11,24 @@
 		</center>
 	</h1>
 	<body>
-		<p>
+		<p class="p-align">
 			This is one of my ongoing projects. <br>
 		</p>
 		<div class="box"> 
-			<h2 style="text-align: center"> 
+			<h2 style="text-align: center; margin-top: -0.2em; margin-bottom: -0.2em"> 
 					512x Minecraft Texture Pack 
 			</h2>
 			<p> 
 				This is a custom high resolution minecraft texture pack that I am working on.
 			</p>
-		</div>
-		<div class="box">
-			
+			<img src="assets/images/texture-pack.png" class="project-image">
+			<p style="margin-bottom: 0em">
+				Download coming soon!
+			</p>
 		</div>
 	</body>
 	<hr class="footerline">
-	<footer>
+	<footer class="p-align">
 		<img src="assets/images/discord.png" class="img">
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
