--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 		<title> 404 | Not Found </title>
 	</head>
 	<div class="text">
-	<h1>
+	<h1 class="h-size">
 		<center>
 			404 Page Not Found
 		</center>
