--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 		<title> Projects </title>
 	</head>
 	<div class="text">
-	<h1>
+	<h1 class="h-size">
 		<center>
 			Projects
 		</center>
@@ -15,16 +15,19 @@
 			This is one of my ongoing projects. <br>
 		</p>
 		<div class="box"> 
-			<h2 style="text-align: center; margin-top: -0.2em; margin-bottom: -0.2em"> 
+			<h2 class="box-title"> 
 					512x Minecraft Texture Pack 
 			</h2>
-			<p> 
+			<p class="box-text"> 
 				This is a custom high resolution minecraft texture pack that I am working on.
 			</p>
 			<img src="assets/images/texture-pack.png" class="project-image">
-			<p style="margin-bottom: 0em">
+			<p style="margin-bottom: 0em" class="box-text">
 				Download coming soon!
 			</p>
+		</div>
+		<div>
+			<a href="https://nico.is-a.dev" class="button"> Home </a> <br> <br>
 		</div>
 	</body>
 	<hr class="footerline">
