--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<body>
 		<p class="p-align">
 			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
-			This website is one of my first major projects, It's not finished yet and I'm still working on it. <br> <br>
+			This website is one of my first major projects, it's not finished yet and I'm still working on it. <br> <br>
 			I am interested in video games and pretty much anything to do with computers. <br> <br>
-			I mostly play csgo, fortnite, minecraft and elite dangerous. <br> <br>
+			I mostly play CS:GO, Fortnite, Minecraft and Elite Dangerous. <br> <br>
 		</p>
 		<div>
 			<a href="projects.html" class="button"> Projects </a> <br> <br>
