--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 			404 Page Not Found
 		</center>
 	</h1>
-	<body>
+	<body class="body">
 		<p class="p-align">
 			Hmm... It seems this page doesnt exist, try checking that you have typed the url correctly. <br> <br>
 		</p>
@@ -20,12 +20,12 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<img src="https://nico.is-a.dev/assets/images/discord.png" class="img">
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/images/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/images/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/images/twitter.png" class="img"> </a>
+		<img src="https://nico.is-a.dev/assets/icons/discord.png" class="img">
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/guilded.png" class="img"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/github.png" class="img"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/youtube.png" class="img"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitch.png" class="img"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitter.png" class="img"> </a>
 		<center>
 			©Nico 2022
 		</center>
