--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			Welcome!!!
 		</center>
 	</h1>
-	<body>
+	<body class="body">
 		<p class="p-align">
 			Hi, my name is Nico and I am 14 years old. I am a self taught developer and I'm currently learning C++, HTML, and CSS. <br> <br>
 			This website is one of my first major projects, it's not finished yet and I'm still working on it. <br> <br>
@@ -18,17 +18,18 @@
 			I mostly play CS:GO, Fortnite, Minecraft and Elite Dangerous. <br> <br>
 		</p>
 		<div>
-			<a href="projects.html" class="button"> Projects </a> <br> <br>
+			<a href="projects.html" class="button"> Projects </a> 
+			<a href="clips.html" class="button-2"> CSGO Clips </a> <br> <br>
 		</div>
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<img src="assets/images/discord.png" class="img">
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/images/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/images/twitter.png" class="img"> </a>
+		<img src="assets/icons/discord.png" class="img">
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="img"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="img"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="img"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="img"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="img"> </a>
 		<center>
 			©Nico 2022
 		</center>
