--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 			Projects
 		</center>
 	</h1>
-	<body>
+	<body class="body">
 		<p class="p-align">
 			This is one of my ongoing projects. <br>
 		</p>
@@ -32,12 +32,12 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<img src="assets/images/discord.png" class="img">
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/images/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/images/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/images/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/images/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/images/twitter.png" class="img"> </a>
+		<img src="assets/icons/discord.png" class="img">
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="img"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="img"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="img"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="img"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="img"> </a>
 		<center>
 			©Nico 2022
 		</center>
