--- a/clips.html
+++ b/clips.html
@@ -7,12 +7,12 @@
 	<div class="text">
 	<h1 class="h-size">
 		<center>
-			CSGO Clips
+			CS:GO Clips
 		</center>
 	</h1>
 	<body class="body-solid">
 		<p class="p-align">
-			These are some of my best moments in CSGO. <br>
+			These are some of my best moments in CS:GO. <br>
 		</p>
 		<div class="box"> 
 			<video class="video" controls>
