--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		</p>
 		<div>
 			<a href="projects.html" class="button"> Projects </a> 
-			<a href="clips.html" class="button-2"> CSGO Clips </a> <br> <br>
+			<a href="clips.html" class="button-2"> CS:GO Clips </a>
+			<a href="more.html" class="button-2"> More info </a> <br> <br>
 		</div>
 	</body>
 	<hr class="footerline">
