--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 			I am interested in video games and pretty much anything to do with computers. <br> <br>
 			I mostly play CS:GO, Fortnite, Minecraft and Elite Dangerous. <br> <br>
 		</p>
+		<div class="big-box" style="margin-top: -1.4em">
+			<img src="assets/images/Collage.jpg" class="big-image">
+		</div>
+		<p class="p-align" style="text-align: center; margin-top: -0.3em">
+			This is a picture collage of some other games I play.
+		</p>
 		<div>
 			<a href="projects.html" class="button"> Projects </a> 
 			<a href="clips.html" class="button-2"> CS:GO Clips </a>
