--- a/projects.html
+++ b/projects.html
@@ -12,11 +12,11 @@
 	</h1>
 	<body class="body">
 		<p class="p-align">
-			This is one of my ongoing projects. <br>
+			These are some of my finished and ongoing projects. <br>
 		</p>
 		<div class="box"> 
 			<h2 class="box-title"> 
-					512x Minecraft Texture Pack 
+				512x Minecraft Texture Pack 
 			</h2>
 			<p class="box-text"> 
 				This is a custom high resolution minecraft texture pack that I am working on.
@@ -24,6 +24,18 @@
 			<img src="assets/images/texture-pack.png" class="project-image">
 			<p style="margin-bottom: 0em" class="box-text">
 				Download coming soon!
+			</p>
+		</div>
+		<div class="box"> 
+			<h2 class="box-title"> 
+				Garry's Mod Map 
+			</h2>
+			<p class="box-text"> 
+				This is a small warehouse map for the sandbox game garry's mod. 
+			</p>
+			<img src="assets/images/gm_warehouse.jpg" class="project-image">
+			<p style="margin-bottom: 0em;" class="download-link">
+				<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2823836322"> Download </a>
 			</p>
 		</div>
 		<div>
