--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<img src="https://nico.is-a.dev/assets/icons/discord.png" class="img">
+		<a href="https://discord.com/users/788257603855712287" target="_blank"> <img src="assets/icons/discord.png" class="img"> </a>
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/youtube.png" class="img"> </a>
