--- a/clips.html
+++ b/clips.html
@@ -10,7 +10,7 @@
 			CS:GO Clips
 		</center>
 	</h1>
-	<body class="body-solid">
+	<body class="body">
 		<p class="p-align">
 			These are some of my best moments in CS:GO. <br>
 		</p>
@@ -50,7 +50,7 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<img src="assets/icons/discord.png" class="img">
+		<a href="https://discord.com/users/788257603855712287" target="_blank"> <img src="assets/icons/discord.png" class="img"> </a>
 		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="img"> </a>
 		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="img"> </a>
 		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="img"> </a>
