--- a/clips.html
+++ b/clips.html
@@ -10,7 +10,7 @@
 			CS:GO Clips
 		</center>
 	</h1>
-	<body class="body">
+	<body class="bg2">
 		<p class="p-align">
 			These are some of my best moments in CS:GO. <br>
 		</p>
