--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 			Projects
 		</center>
 	</h1>
-	<body class="body">
+	<body class="bg2">
 		<p class="p-align">
 			These are some of my finished and ongoing projects. <br>
 		</p>
