--- a/404.html
+++ b/404.html
@@ -20,12 +20,12 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<a href="https://discord.com/users/788257603855712287" target="_blank"> <img src="assets/icons/discord.png" class="img"> </a>
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitter.png" class="img"> </a>
+		<a href="https://discord.com/users/945213139719450655" target="_blank"> <img src="assets/icons/discord.png" class="icon"> </a>
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/guilded.png" class="icon"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/github.png" class="icon"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/youtube.png" class="icon"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitch.png" class="icon"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="https://nico.is-a.dev/assets/icons/twitter.png" class="icon"> </a>
 		<center>
 			©Nico 2022
 		</center>
