--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 		</p>
 		<div>
 			<a href="projects.html" class="button"> Projects </a> 
-			<a href="clips.html" class="button-2"> CS:GO Clips </a>
+			<!--<a href="clips.html" class="button-2"> CS:GO Clips </a>-->
 			<a href="more.html" class="button-2"> More info </a> <br> <br>
 		</div>
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<a href="https://discord.com/users/945213139719450655" target="_blank"> <img src="assets/icons/discord.png" class="img"> </a>
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="img"> </a>
+		<a href="https://discord.com/users/945213139719450655" target="_blank"> <img src="assets/icons/discord.png" class="icon"> </a>
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="icon"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="icon"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="icon"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="icon"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="icon"> </a>
 		<center>
 			©Nico 2022
 		</center>
