--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,18 @@
 		</div>
 		<div class="box"> 
 			<h2 class="box-title"> 
+				Discord Bot 
+			</h2>
+			<p class="box-text"> 
+				This is a goofy bot that im making in discord.js. 
+			</p>
+			<img src="assets/images/goofy-bot.png" class="project-image">
+			<p style="margin-bottom: 0em;" class="box-text">
+				Invite coming soon!
+			</p>
+		</div>
+				<div class="box"> 
+			<h2 class="box-title"> 
 				Garry's Mod Map 
 			</h2>
 			<p class="box-text"> 
@@ -44,12 +56,12 @@
 	</body>
 	<hr class="footerline">
 	<footer class="p-align">
-		<a href="https://discord.com/users/788257603855712287" target="_blank"> <img src="assets/icons/discord.png" class="img"> </a>
-		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="img"> </a>
-		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="img"> </a>
-		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="img"> </a>
-		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="img"> </a>
-		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="img"> </a>
+		<a href="https://discord.com/users/945213139719450655" target="_blank"> <img src="assets/icons/discord.png" class="icon"> </a>
+		<a href="https://www.guilded.gg/nicosnico" target="_blank"> <img src="assets/icons/guilded.png" class="icon"> </a>
+		<a href="https://github.com/NicoGaming77" target="_blank"> <img src="assets/icons/github.png" class="icon"> </a>
+		<a href="https://www.youtube.com/channel/UCl7C8ymeQwZCqHSj7ilKaDQ" target="_blank"> <img src="assets/icons/youtube.png" class="icon"> </a>
+		<a href="https://www.twitch.tv/nicoisgaming77" target="_blank"> <img src="assets/icons/twitch.png" class="icon"> </a>
+		<a href="https://twitter.com/Nicosnico2" target="_blank"> <img src="assets/icons/twitter.png" class="icon"> </a>
 		<center>
 			©Nico 2022
 		</center>
